--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "serve": "node server",
-    "start": "webpack serve --hot --mode development",
+    "start": "webpack serve --hot --mode development --host 192.168.0.108",
     "build": "webpack --mode production"
   },
   "repository": {
@@ -19,22 +19,19 @@
   },
   "homepage": "https://github.com/Unker/molecules--web#readme",
   "dependencies": {
-    "@babel/cli": "^7.13.10",
-    "@babel/core": "^7.13.10",
-    "@babel/preset-env": "^7.13.10",
-    "@babel/preset-react": "^7.12.13",
     "@ethersproject/contracts": "^5.0.5",
     "@ethersproject/providers": "^5.0.12",
     "@hot-loader/react-dom": "^17.0.1",
+    "@metamask/eth-sig-util": "^4.0.0",
     "@use-it/interval": "^1.0.0",
-    "@walletconnect/web3-provider": "^1.4.0",
+    "@walletconnect/client": "^1.7.3",
+    "@walletconnect/web3-provider": "^1.7.3",
     "babel-loader": "^8.2.2",
     "bootstrap": "^5.1.3",
     "classnames": "^2.2.6",
-    "core-js": "^3.18.3",
+    "core-js": "^3.21.1",
     "css-loader": "^5.1.3",
     "eth-react": "^0.1.0",
-    "eth-sig-util": "^3.0.1",
     "ethers": "^5.0.32",
     "fetch": "^1.1.0",
     "file-loader": "^6.2.0",
@@ -58,13 +55,17 @@
     "regenerator-runtime": "^0.13.7",
     "style-loader": "^2.0.0",
     "url-loader": "^4.1.1",
-    "web3": "^1.3.4",
+    "web3": "^1.7.1",
     "web3-eth-contract": "^1.3.4",
     "web3modal": "^1.9.3",
     "webpack": "^4.46.0",
     "webpack-cli": "^4.5.0"
   },
   "devDependencies": {
+    "@babel/cli": "^7.17.6",
+    "@babel/core": "^7.17.5",
+    "@babel/preset-env": "^7.16.11",
+    "@babel/preset-react": "^7.16.7",
     "dotenv-webpack": "^7.0.2",
     "html-webpack-plugin": "^4.5.2",
     "webpack-dev-server": "^3.11.2"
