--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "serve": "node server",
-    "start": "webpack serve --hot --mode development --host 192.168.0.108",
+    "start": "webpack serve --hot --mode development --host localhost --port 9000",
     "build": "webpack --mode production"
   },
   "repository": {
