--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -1,23 +1,23 @@
 image: Ubuntu1804  # образ для сборки
 
-stack: node 12  # окружение
+stack: node 14  # окружение
 
 branches:
   only:
-    - master  # ветка git
+    - eth  # ветка git
 
 cache: node_modules  # кеширование
 
 install:
-  - yarn  # команда установки зависимостей
+  - map install  # команда установки зависимостей
 
 build: off  # отключаем встроенную в appveyor систему сборки
 
 build_script:
-  - yarn run build   # команда сборки
+  - map run build   # команда сборки
 
-test_script:
-  - yarn run lint && yarn test  # скрипт тестирования
+# test_script:
+#   - yarn run lint && yarn test  # скрипт тестирования
 
 deploy_script:  # скрипт развёртывания
   - git config --global credential.helper store
